@@ -1,73 +1,51 @@
 /**
- * Copyright (c) 2019, RTE (http://www.rte-france.com)
+ * Copyright (c) 2024, RTE (http://www.rte-france.com)
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
  */
-package com.powsybl.caseserver;
+package com.powsybl.caseserver.service;
 
+import com.powsybl.caseserver.CaseException;
 import com.powsybl.caseserver.dto.CaseInfos;
-import com.powsybl.caseserver.dto.ExportCaseInfos;
 import com.powsybl.caseserver.elasticsearch.CaseInfosService;
-import com.powsybl.caseserver.parsers.FileNameInfos;
-import com.powsybl.caseserver.parsers.FileNameParser;
-import com.powsybl.caseserver.parsers.FileNameParsers;
 import com.powsybl.caseserver.repository.CaseMetadataEntity;
 import com.powsybl.caseserver.repository.CaseMetadataRepository;
-import com.powsybl.commons.datasource.DataSource;
-import com.powsybl.commons.datasource.DataSourceUtil;
-import com.powsybl.commons.datasource.MemDataSource;
 import com.powsybl.computation.ComputationManager;
 import com.powsybl.computation.local.LocalComputationManager;
-import com.powsybl.iidm.network.Exporter;
 import com.powsybl.iidm.network.Importer;
 import com.powsybl.iidm.network.Network;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.cloud.stream.function.StreamBridge;
 import org.springframework.context.annotation.ComponentScan;
 import org.springframework.http.HttpStatus;
-import org.springframework.messaging.Message;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.server.ResponseStatusException;
 
-import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.UncheckedIOException;
-import java.nio.file.DirectoryStream;
-import java.nio.file.FileSystem;
-import java.nio.file.FileSystems;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.StandardCopyOption;
-import java.time.Instant;
-import java.time.temporal.ChronoUnit;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.nio.file.*;
+import java.util.List;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.UUID;
 import java.util.stream.Stream;
-import java.util.zip.ZipEntry;
-import java.util.zip.ZipOutputStream;
 
 import static com.powsybl.caseserver.CaseException.createDirectoryNotFound;
-import static com.powsybl.caseserver.dto.CaseInfos.*;
 
 /**
  * @author Abdelsalem Hedhili <abdelsalem.hedhili at rte-france.com>
  * @author Franck Lecuyer <franck.lecuyer at rte-france.com>
+ * @author Ghazwa Rehili <ghazwa.rehili at rte-france.com>
  */
 @Service
 @ComponentScan(basePackageClasses = {CaseInfosService.class})
-public class CaseService {
+public class FsCaseService implements CaseService {
 
-    private static final Logger LOGGER = LoggerFactory.getLogger(CaseService.class);
-
-    private static final String CATEGORY_BROKER_OUTPUT = CaseService.class.getName() + ".output-broker-messages";
-
-    private static final Logger OUTPUT_MESSAGE_LOGGER = LoggerFactory.getLogger(CATEGORY_BROKER_OUTPUT);
+    private static final Logger LOGGER = LoggerFactory.getLogger(FsCaseService.class);
 
     private FileSystem fileSystem = FileSystems.getDefault();
 
@@ -76,7 +54,7 @@ public class CaseService {
     private final CaseMetadataRepository caseMetadataRepository;
 
     @Autowired
-    private StreamBridge caseInfosPublisher;
+    private NotificationService notificationService;
 
     @Autowired
     private CaseInfosService caseInfosService;
@@ -84,17 +62,14 @@ public class CaseService {
     @Value("${case-store-directory:#{systemProperties['user.home'].concat(\"/cases\")}}")
     private String rootDirectory;
 
-    public CaseService(CaseMetadataRepository caseMetadataRepository) {
+    public FsCaseService(CaseMetadataRepository caseMetadataRepository) {
         this.caseMetadataRepository = caseMetadataRepository;
     }
 
-    Importer getImporterOrThrowsException(Path caseFile) {
-        DataSource dataSource = DataSource.fromPath(caseFile);
-        Importer importer = Importer.find(dataSource, computationManager);
-        if (importer == null) {
-            throw CaseException.createFileNotImportable(caseFile);
-        }
-        return importer;
+    @Override
+    public String getFormat(UUID caseUuid) {
+        Path file = getCaseFile(caseUuid);
+        return getFormat(file);
     }
 
     String getFormat(Path caseFile) {
@@ -102,12 +77,13 @@ public class CaseService {
         return importer.getFormat();
     }
 
-    public List<CaseInfos> getCases(Path directory) {
-        try (Stream<Path> walk = Files.walk(directory)) {
+    @Override
+    public List<CaseInfos> getCases() {
+        try (Stream<Path> walk = Files.walk(getStorageRootDir())) {
             return walk.filter(Files::isRegularFile)
                     .map(this::getCaseInfos)
                     .filter(Objects::nonNull)
-                    .collect(Collectors.toList());
+                    .toList();
         } catch (IOException e) {
             throw new UncheckedIOException(e);
         }
@@ -122,19 +98,23 @@ public class CaseService {
         }
     }
 
+    @Override
     public String getCaseName(UUID caseUuid) {
         Path file = getCaseFile(caseUuid);
         if (file == null) {
             throw createDirectoryNotFound(caseUuid);
         }
-        CaseInfos caseInfos = getCase(file);
+        CaseInfos caseInfos = getCaseInfos(file);
+        if (caseInfos == null) {
+            throw CaseException.createFileNameNotFound(caseUuid);
+        }
         return caseInfos.getName();
     }
 
-    public CaseInfos getCase(Path casePath) {
-        checkStorageInitialization();
-        Optional<CaseInfos> caseInfo = getCases(casePath).stream().findFirst();
-        return caseInfo.orElseThrow();
+    @Override
+    public CaseInfos getCaseInfos(UUID caseUuid) {
+        Path file = getCaseFile(caseUuid);
+        return getCaseInfos(file);
     }
 
     public Path getCaseFile(UUID caseUuid) {
@@ -164,7 +144,8 @@ public class CaseService {
         return null;
     }
 
-    boolean caseExists(UUID caseName) {
+    @Override
+    public boolean caseExists(UUID caseName) {
         checkStorageInitialization();
         Path caseFile = getCaseFile(caseName);
         if (caseFile == null) {
@@ -173,7 +154,8 @@ public class CaseService {
         return Files.exists(caseFile) && Files.isRegularFile(caseFile);
     }
 
-    UUID importCase(MultipartFile mpf, boolean withExpiration, boolean withIndexation) {
+    @Override
+    public UUID importCase(MultipartFile mpf, boolean withExpiration, boolean withIndexation) {
         checkStorageInitialization();
 
         UUID caseUuid = UUID.randomUUID();
@@ -183,7 +165,7 @@ public class CaseService {
         validateCaseName(caseName);
 
         if (Files.exists(uuidDirectory)) {
-            throw CaseException.createDirectoryAreadyExists(uuidDirectory);
+            throw CaseException.createDirectoryAreadyExists(uuidDirectory.toString());
         }
 
         Path caseFile;
@@ -213,11 +195,12 @@ public class CaseService {
         if (withIndexation) {
             caseInfosService.addCaseInfos(caseInfos);
         }
-        sendImportMessage(caseInfos.createMessage());
+        notificationService.sendImportMessage(caseInfos.createMessage());
         return caseUuid;
     }
 
-    UUID duplicateCase(UUID sourceCaseUuid, boolean withExpiration) {
+    @Override
+    public UUID duplicateCase(UUID sourceCaseUuid, boolean withExpiration) {
         try {
             Path existingCaseFile = getCaseFile(sourceCaseUuid);
             if (existingCaseFile == null || existingCaseFile.getParent() == null) {
@@ -236,10 +219,9 @@ public class CaseService {
             if (existingCase.isIndexed()) {
                 caseInfosService.addCaseInfos(caseInfos);
             }
-
             createCaseMetadataEntity(newCaseUuid, withExpiration, existingCase.isIndexed());
 
-            sendImportMessage(caseInfos.createMessage());
+            notificationService.sendImportMessage(caseInfos.createMessage());
             return newCaseUuid;
 
         } catch (IOException e) {
@@ -255,40 +237,8 @@ public class CaseService {
         return caseMetadataRepository.findById(caseUuid).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "case " + caseUuid + " not found"));
     }
 
-    private void createCaseMetadataEntity(UUID newCaseUuid, boolean withExpiration, boolean withIndexation) {
-        Instant expirationTime = null;
-        if (withExpiration) {
-            expirationTime = Instant.now().plus(1, ChronoUnit.HOURS);
-        }
-        caseMetadataRepository.save(new CaseMetadataEntity(newCaseUuid, expirationTime, withIndexation));
-    }
-
-    public List<CaseInfos> getCasesToReindex() {
-        Set<UUID> casesToReindex = caseMetadataRepository.findAllByIndexedTrue()
-                .stream()
-                .map(CaseMetadataEntity::getId)
-                .collect(Collectors.toSet());
-        return getCases(getStorageRootDir()).stream().filter(c -> casesToReindex.contains(c.getUuid())).toList();
-    }
-
-    CaseInfos createInfos(String fileBaseName, UUID caseUuid, String format) {
-        FileNameParser parser = FileNameParsers.findParser(fileBaseName);
-        if (parser != null) {
-            Optional<? extends FileNameInfos> fileNameInfos = parser.parse(fileBaseName);
-            if (fileNameInfos.isPresent()) {
-                return CaseInfos.create(fileBaseName, caseUuid, format, fileNameInfos.get());
-            }
-        }
-        return CaseInfos.builder().name(fileBaseName).uuid(caseUuid).format(format).build();
-    }
-
-    @Transactional
-    public void disableCaseExpiration(UUID caseUuid) {
-        CaseMetadataEntity caseMetadataEntity = getCaseMetaDataEntity(caseUuid);
-        caseMetadataEntity.setExpirationDate(null);
-    }
-
-    Optional<Network> loadNetwork(UUID caseUuid) {
+    @Override
+    public Optional<Network> loadNetwork(UUID caseUuid) {
         checkStorageInitialization();
 
         Path caseFile = getCaseFile(caseUuid);
@@ -321,7 +271,8 @@ public class CaseService {
         }
     }
 
-    void deleteCase(UUID caseUuid) {
+    @Override
+    public void deleteCase(UUID caseUuid) {
         checkStorageInitialization();
         Path caseDirectory = getCaseDirectory(caseUuid);
         deleteDirectoryRecursively(caseDirectory);
@@ -329,7 +280,8 @@ public class CaseService {
         caseMetadataRepository.deleteById(caseUuid);
     }
 
-    void deleteAllCases() {
+    @Override
+    public void deleteAllCases() {
         checkStorageInitialization();
 
         Path rootDirectoryPath = getStorageRootDir();
@@ -361,46 +313,18 @@ public class CaseService {
         this.fileSystem = Objects.requireNonNull(fileSystem);
     }
 
+    @Override
     public void setComputationManager(ComputationManager computationManager) {
         this.computationManager = Objects.requireNonNull(computationManager);
     }
 
-    static void validateCaseName(String caseName) {
-        Objects.requireNonNull(caseName);
-        if (!caseName.matches("[^<>:\"/|?*]+(\\.[\\w]+)")) {
-            throw CaseException.createIllegalCaseName(caseName);
-        }
+    @Override
+    public ComputationManager getComputationManager() {
+        return computationManager;
     }
 
-    /*
-     The query is an elasticsearch (Lucene) form query, so here it will be :
-     date:XXX AND geographicalCode:(X)
-     date:XXX AND geographicalCode:(X OR Y OR Z)
-    */
-    List<CaseInfos> searchCases(String query) {
-        checkStorageInitialization();
-
-        return caseInfosService.searchCaseInfos(query);
-    }
-
-    private void sendImportMessage(Message<String> message) {
-        OUTPUT_MESSAGE_LOGGER.debug("Sending message : {}", message);
-        caseInfosPublisher.send("publishCaseImport-out-0", message);
-    }
-
-    public List<CaseInfos> getMetadata(List<UUID> ids) {
-        List<CaseInfos> cases = new ArrayList<>();
-        ids.forEach(caseUuid -> {
-            Path file = getCaseFile(caseUuid);
-            if (file != null) {
-                CaseInfos caseInfos = getCase(file);
-                cases.add(caseInfos);
-            }
-        });
-        return cases;
-    }
-
-    Optional<byte[]> getCaseBytes(UUID caseUuid) {
+    @Override
+    public Optional<byte[]> getCaseBytes(UUID caseUuid) {
         checkStorageInitialization();
 
         Path caseFile = getCaseFile(caseUuid);
@@ -419,49 +343,9 @@ public class CaseService {
         return Optional.empty();
     }
 
-    public Optional<ExportCaseInfos> exportCase(UUID caseUuid, String format, String fileName, Map<String, Object> formatParameters) throws IOException {
-        if (!Exporter.getFormats().contains(format)) {
-            throw CaseException.createUnsupportedFormat(format);
-        }
-
-        var optionalNetwork = loadNetwork(caseUuid);
-        if (optionalNetwork.isPresent()) {
-            var network = optionalNetwork.get();
-            var memDataSource = new MemDataSource();
-            Properties exportProperties = null;
-            if (formatParameters != null) {
-                exportProperties = new Properties();
-                exportProperties.putAll(formatParameters);
-            }
-
-            network.write(format, exportProperties, memDataSource);
-
-            var listNames = memDataSource.listNames(".*");
-            String fileOrNetworkName = fileName != null ? fileName : DataSourceUtil.getBaseName(getCaseName(caseUuid));
-            byte[] networkData;
-            if (listNames.size() == 1) {
-                String extension = listNames.iterator().next();
-                fileOrNetworkName += extension;
-                networkData = memDataSource.getData(extension);
-            } else {
-                fileOrNetworkName += ".zip";
-                networkData = createZipFile(listNames, memDataSource);
-            }
-            return Optional.of(new ExportCaseInfos(fileOrNetworkName, networkData));
-        } else {
-            return Optional.empty();
-        }
+    @Override
+    public CaseMetadataRepository getCaseMetadataRepository() {
+        return caseMetadataRepository;
     }
 
-    private byte[] createZipFile(Collection<String> names, MemDataSource dataSource) throws IOException {
-        try (var outputStream = new ByteArrayOutputStream();
-             var zipOutputStream = new ZipOutputStream(outputStream)) {
-            for (String name : names) {
-                zipOutputStream.putNextEntry(new ZipEntry(name));
-                zipOutputStream.write(dataSource.getData(name));
-                zipOutputStream.closeEntry();
-            }
-            return outputStream.toByteArray();
-        }
-    }
 }
